Finished the project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +13,22 @@
     <body>
 
         <div class="game-board">
+            <div class="none" id="gameOverScreen"></div>
             
+            <div id="placar">Score:<br></div>
+
             <img src="./images/clouds.png" class="clouds">
             <img src="./images/mario.gif" class="mario">
             <img src="./images/pipe.png" class="pipe">
 
+            <div class="none" id="gameOverTextAndButton">
+                Game Over
+                <button type="button">Restart</button>
+            </div>
 
         </div>
+
+        
+        <div id="chao"></div>
     </body>
 </html>
